--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ itertools = "0.13.0"
 logos = "0.14.1"
 serde = { version = "1.0.208", features = ["derive"] }
 serde_json = "1.0.125"
+
+[dev-dependencies]
+tokio = { version = "1.39.3", features = ["full"] }
